Avance menú aesthetic y estructura base

--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Proyecto personal idweb</title>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet" />
-  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css2?family=Bitcount+Prop+Double+Ink:wght@100..900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Libertinus+Keyboard&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Libertinus+Keyboard&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Libertinus+Keyboard&family=Rammetto+One&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Fascinate+Inline&family=Libertinus+Keyboard&family=Rammetto+One&display=swap" rel="stylesheet">
+<link rel ="stylesheet" href="styles.css" /> 
+
 </head>
 <body>
   <header>
@@ -27,9 +25,25 @@
       <h1>Crónicas para mi yo en mis 20's</h1>
     </div>
   </header>
+  <nav class="navbar">
+  <ul>
+    <li><a href="#inicio">Inicio</a></li>
+    <li><a href="#preguntas">Preguntas frecuentes</a></li>
+    <li><a href="#contenido1">Música</a></li>
+    <li><a href="#contenido2">Hobbies</a></li>
+    <li><a href="#contenido3">Cosas que leí alguna vez</a></li>
+    <li><a href="#contacto">Contacto</a></li>
+  </ul>
+</nav>
 
   <main>
-    <section>
+    <section id="inicio">
+      <h2>Contexto</h2>
+      <p>Hola, soy Alexandra y recientemente cumplí 18 años. Mis años de adolescencia se acaban y los 20's me respiran en la nuca, pero no estoy dispuesta a dejar esta etapa sin registrarla debidamente. En este sitio web documentaré lo que en unos años serán los vestigios de mi juventud.</p>
+      <p>Con el tiempo he comprendido la importancia y peso que tienen los recuerdos. Espero mi yo del futuro vea esto y me recuerde.</p>
+    </section>
+
+    <section id ="preguntas">
       <h2>Preguntas frecuentes</h2>
       <ul>
       <h3>¿Quién soy?</h3>
@@ -41,6 +55,9 @@
       </ul>
     </section>
   </main>
+
+
 </body>
+
 </html>
 
