--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -17,21 +18,22 @@
 <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Libertinus+Keyboard&family=Rammetto+One&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Fascinate+Inline&family=Libertinus+Keyboard&family=Rammetto+One&display=swap" rel="stylesheet">
 <link rel ="stylesheet" href="styles.css" /> 
-
 </head>
+
 <body>
   <header>
     <div class="title-container">
       <h1>Crónicas para mi yo en mis 20's</h1>
     </div>
   </header>
+
   <nav class="navbar">
   <ul>
     <li><a href="#inicio">Inicio</a></li>
     <li><a href="#preguntas">Preguntas frecuentes</a></li>
-    <li><a href="#contenido1">Música</a></li>
-    <li><a href="#contenido2">Hobbies</a></li>
-    <li><a href="#contenido3">Cosas que leí alguna vez</a></li>
+    <li><a href="musica.html">Música</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="cosas-que-lei.html">Cosas que leí alguna vez</a></li>
     <li><a href="#contacto">Contacto</a></li>
   </ul>
 </nav>
@@ -56,8 +58,13 @@
     </section>
   </main>
 
-
 </body>
+<footer>
+  <section id="contacto">
+    <h2>Contacto</h2>
+    <p>Puedes contactarme haciendo click <a href="contacto.html">aquí</a>.</p>
+  </section>
+</footer>
 
 </html>
 
