Agrego sección hobbies con fondos e imagenes

--- a/cosas-que-lei.html
+++ b/cosas-que-lei.html
@@ -5,7 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosas que leí</title>
 </head>
+
 <body>
+
+    <h2>Cosas que leí</h2>
+    <section class="reseña-libro">
+       <article> 
+         <h3>"La Dependienta" - Sayaka Murata</h3>
+         <h4>Reseña</h4>
+         <p>Este libro me lo recomendó una cuenta random en TikTok y creí que solo lo leería y lo olvidaría como el resto de libros que me recomendaba esa plataforma, pero me sorprendió.</p>
+         <p>La historia trata sobre una mujer que trabaja en una tienda de conveniencia en Japón y cómo su vida se ve afectada por las expectativas sociales y culturales. Me gustó mucho la forma en que la autora abordó temas como la conformidad, la identidad y la presión social.</p>
+         <p>El resto del mundo la mira expectante. "¿Por qué no tienes un trabajo más formal?" "¿Por qué todavía no te has casado?" "¿Por qué no tienes hijos?"
+         <p>Ella trata de encajar, se esfuerza por camuflarse entre la gente "normal" y cuando tuvo que dejar la vida que le daba felicidad para de esa forma satisfacer a otros se dió cuenta de lo miserable que era.</p>
+         <p>Yo solía pensar que el conformismo y la miseria se basaban en no tener ambición, pero el verdadero conformismo y miseria es dejar que tu vida la dicten otros.</p>
+         <p>Cada que mi mente va a lugares oscuros y me siento perdida entre lo que debería hacer y lo que me hace feliz leo este libro. Me recuerda que el éxito viene en distintas formas y no es el mismo para todos.</p>
+        </article> 
     
+    </section>
 </body>
 </html>
