--- a/hobbies.html
+++ b/hobbies.html
@@ -12,8 +12,25 @@
     <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Libertinus+Keyboard&family=Rammetto+One&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Fascinate+Inline&family=Libertinus+Keyboard&family=Rammetto+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="otro-styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
+    <header>
+    <div class="title-container">
+      <h1>Crónicas para mi yo en mis 20's</h1>
+    </div>
+  </header>
+
+    <nav class="navbar">
+  <ul>
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="musica.html">Música</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="cosas-que-lei.html">Cosas que leí alguna vez</a></li>
+    <li><a href="contacto.html">Contacto</a></li>
+  </ul>
+</nav>
     <section class="hobbies">
         <h2>Hobbies</h2>
 
