--- a/contacto.html
+++ b/contacto.html
@@ -14,6 +14,21 @@
 </head>
 
 <body>
+    <header>
+    <div class="title-container">
+      <h1>Crónicas para mi yo en mis 20's</h1>
+    </div>
+  </header>
+
+    <nav class="navbar">
+  <ul>
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="musica.html">Música</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="cosas-que-lei.html">Cosas que leí alguna vez</a></li>
+    <li><a href="contacto.html">Contacto</a></li>
+  </ul>
+</nav>
     <h1>Contáctame llenando tus datos aquí</h1>
 <main>
     <form>
