--- a/cosas-que-lei.html
+++ b/cosas-que-lei.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cosas que leí</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+    <header>
+    <div class="title-container">
+      <h1>Crónicas para mi yo en mis 20's</h1>
+    </div>
+  </header>
+
+    <nav class="navbar">
+  <ul>
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="musica.html">Música</a></li>
+    <li><a href="hobbies.html">Hobbies</a></li>
+    <li><a href="cosas-que-lei.html">Cosas que leí alguna vez</a></li>
+    <li><a href="contacto.html">Contacto</a></li>
+  </ul>
+</nav>
 
     <h2>Cosas que leí</h2>
     <section class="reseña-libro">
