--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Libertinus+Keyboard&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Fascinate+Inline&family=Libertinus+Keyboard&family=Rammetto+One&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&family=Fascinate+Inline&family=Libertinus+Keyboard&family=Rammetto+One&display=swap" rel="stylesheet">
+
 <link rel ="stylesheet" href="styles.css" /> 
+
 </head>
 
 <body>
@@ -29,17 +31,18 @@
 
   <nav class="navbar">
   <ul>
-    <li><a href="#inicio">Inicio</a></li>
+    <li><a href="index.html">Inicio</a></li>
+    <li><a href="#contexto">Contexto</a></li>
     <li><a href="#preguntas">Preguntas frecuentes</a></li>
     <li><a href="musica.html">Música</a></li>
     <li><a href="hobbies.html">Hobbies</a></li>
     <li><a href="cosas-que-lei.html">Cosas que leí alguna vez</a></li>
-    <li><a href="#contacto">Contacto</a></li>
+    <li><a href="contacto.html">Contacto</a></li>
   </ul>
 </nav>
 
   <main>
-    <section id="inicio">
+    <section id="contexto">
       <h2>Contexto</h2>
       <p>Hola, soy Alexandra y recientemente cumplí 18 años. Mis años de adolescencia se acaban y los 20's me respiran en la nuca, pero no estoy dispuesta a dejar esta etapa sin registrarla debidamente. En este sitio web documentaré lo que en unos años serán los vestigios de mi juventud.</p>
       <p>Con el tiempo he comprendido la importancia y peso que tienen los recuerdos. Espero mi yo del futuro vea esto y me recuerde.</p>
