--- a/musica.html
+++ b/musica.html
@@ -35,9 +35,314 @@
     <li><a href="contacto.html">Contacto</a></li>
   </ul>
 </nav>
-</nav>
+
+<!-- KING PRINCESS-->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/LNxWTS25Tbk" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"1950" - King Princess</h3>
+  <p>Super romántica, esta nunca falla para expresar yearn.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/j7QOKDNeBKQ?si=sURjf_vcRlM_hzVQ" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Only time makes it human" - King Princess</h3>
+  <p>Esta hubiera sido muy popular en bares queers, pero la pandemia la apagó. Trata de cuando tu ex es tu mayor inspiración/devastación.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/43n1wghXRGM?si=ZyUFgFBiIueWfcyK" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Talia" - King Princess</h3>
+  <p>Nostalgia lésbica perfecta.</p>
+</article>
+
+<!-- HAYLEY KIYOKO-->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/YXTzMOmmEfE?si=JWjeTeRhZJu1D4Dd" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Curious" - Hayley Kiyoko</h3>
+  <p>"NO A LAS CURIOSAS"-Hayley, probablemente</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/I0MT8SwNa_U?si=2twA5Sce74nTSrAt" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Girls Like Girls" - Hayley Kiyoko</h3>
+  <p>El himno sapphic definitivo. Y VA A TENER UNA PELÍCULA EN 2026!</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/YynKelHGhNc?si=b-AceT5FT6Rvz7vy" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"What I Need" (feat. Kehlani) - Hayley Kiyoko</h3>
+  <p>Colaboración perfecta queer.</p>
+</article>
+
+<!-- KAVINSKY  -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/MV_3Dpw-BRY" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Nightcall" - Kavinsky</h3>
+  <p>Conducir de noche con las luces de neón. La voz femenina te lleva a otro universo.</p>
+</article>
+
+<!-- SKY FERREIRA-->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/rEamE0MYPkg" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Everything Is Embarrassing" - Sky Ferreira</h3>
+  <p>Cuando todo sale mal pero sigues bailando.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/3QRWCKcdg_M?si=rhxB1fCJaccbv7iJ" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"24 Hours" - Sky Ferreira</h3>
+  <p>Un día completo de caos emocional.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/FFZCyoHfI7Q?si=WGSU6mVb8pvDL2ZZ" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Boys" - Sky Ferreira</h3>
+  <p>Indie pop indie perfecto.</p>
+</article>
+
+<!-- THE MARÍAS -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/EiS7cKfuf6w?si=aJdbgh0SCaCNSehi" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Sienna" - The Marías</h3>
+  <p>Me trae recuerdos que nunca viví.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/4kCVGodVS88?si=NP0-9BlTCP6aKd1F" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Back to me" - The Marías</h3>
+  <p>Soy migajera.</p>
+</article>
+
+<!-- TWICE -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/f5_wn8mexmM" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"The Feels" - TWICE</h3>
+  <p>Pop brillante que te levanta el ánimo.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/hBJg-9YOdRg?si=YMOLHQLT6MDcCEDv" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Moonlight" - TWICE</h3>
+  <p>Simple y romántica, da vibes de playa tropical.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/k6jqx9kZgPM?si=FS7wpd8s_s6oNadU" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Talk That Talk" - TWICE</h3>
+  <p>K-pop adictivo en su máxima expresión.</p>
+</article>
+
+<!-- TLC -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/FrLequ6dUdM" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"No Scrubs" - TLC</h3>
+  <p>Himno eterno. Punto.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/8WEtxJ4-sh4" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Waterfalls" - TLC</h3>
+  <p>Sabiduría 90s en loop eterno.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/LlZydtG3xqI" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Creep" - TLC</h3>
+  <p>R&B sensual que no envejece.</p>
+</article>
+
+<!-- ETHEL CAIN -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/9Ed_WWmFy9I?si=0JURTdZ1GFrx-mcU" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"American Teenager" - Ethel Cain</h3>
+  <p>Say what you want, but say it like you mean it with your fists for once!</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/xu-t3tqDyAY?si=Vw97kxq3W7jY-Dwv" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Crush" - Ethel Cain</h3>
+  <p>Esta tmb es para soñar despiertos. Como cuando te gusta alguien que no parece tener futuro.</p>
+</article>
+
+<!-- HIM-->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/1V4AscLidWg?si=dtl8RKYJtT3ArhXs" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Join Me In Death" - HIM</h3>
+  <p>Gótico romántico finlandés y un nuevo trend de moda (que le da muy bien a los fanfics que estaba leyendo).</p>
+</article>
+
+
+<!-- SHURA -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/8gtREooYQ9w?si=OtvKdNOD2lp9sw68" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"2Shy" - Shura</h3>
+  <p>Para los tímidos que sienten demasiado.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/x2AOjb9HW2E?si=_uJiHpt9Xbd6nUYj" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Touch" - Shura</h3>
+  <p>Indie pop que abraza, muy romántico-melancólica.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/nJ4uBdmnKds?si=tZ7NB69cmHO88XXi" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"What's It Gonna Be?" - Shura</h3>
+  <p>La letra es triste, pero tiene un beat suuuper adictivo.</p>
+</article>
+
+<!-- CHAPPELL ROAN  -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/GR3Liudev18?si=nl7lzAYiNQPqbMMu" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Pink Pony Club" - Chappell Roan</h3>
+  <p>Escapar a donde nadie te juzgue. SOY UN PONY ROSAAA.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/nXZuv1T8bfg?si=rN0DaLHuInpHnxTf" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Naked in Manhattan" - Chappell Roan</h3>
+  <p>Es super linda, para soñar despiertos.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/VS6ixn2berk?si=Zc-PRYaO_ct1r8p1" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Red Wine Supernova" - Chappell Roan</h3>
+  <p>¿La magia es una alusión a qué? Nadie sabe (todos saben).</p>
+</article>
+
+<!-- GWEN STEFANI  -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/Kgjkth6BRRY" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Hollaback Girl" - Gwen Stefani</h3>
+  <p>Clásico que nunca pasa de moda.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/PHzOOQfhPFg" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Cool" - Gwen Stefani</h3>
+  <p>Harajuku attitude forever.</p>
+</article>
+
+<!-- ICONA POP -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/UxxajLWwzqY" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"I Love It" (feat. Charli XCX) - Icona Pop</h3>
+  <p>Para bailar hasta que duela todo.</p>
+</article>
+
+<!-- DAVID BOWIE  -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/lXgkuM2NhYI" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Heroes" - David Bowie</h3>
+  <p>Ser héroe aunque sea solo por un día.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/iYYRH4apXDo" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Space Oddity" - David Bowie</h3>
+  <p>Mayor Tom para la nostalgia cósmica.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/AZKcl4-tcuo" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Life On Mars?" - David Bowie</h3>
+  <p>Extraterrestre glam perfecto.</p>
+</article>
+
+<!-- QUEEN -->
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/fJ9rUzIMcZQ" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Bohemian Rhapsody" - Queen</h3>
+  <p>Freddie siendo Freddie. Fin.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/kijpcUv-b8M" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Somebody To Love" - Queen</h3>
+  <p>La voz que todo lo puede.</p>
+</article>
+
+<article class="cancion">
+  <div class="video-container">
+    <iframe src="https://www.youtube.com/embed/HgzGwKwLmgM" frameborder="0" allowfullscreen></iframe>
+  </div>
+  <h3>"Don't Stop Me Now" - Queen</h3>
+  <p>Energía pura e imparable.</p>
+</article>
+<p>Menciones honoríficas que no incluí porque tengo sueño y todo lo hago a última hora: TODAS LAS CANCIONES DE KING GNU y de verdad amo a las TWICE.</p>
 </body>
 <footer>
+
   
   <p>&copy; 2025 Mi Portafolio Personal. Todos los derechos reservados.</p>
 
